common/src/snapshots/common__itertools__tests__test_power_set_without_empty-[_1,_2,_].snap
---
source: common/src/itertools.rs
expression: result
info:
  collection:
    - 1
    - 2
---
- - 1
- - 2
- - 1
  - 2

